2022-04-18
+ MINOR
	- Offsets updated for FFXIV Version 6.1 (Fixes issues with Housing items & mounts)
	- Lumina functionality renamed to Penumbra at goat's request.
+ BUGFIX
	- Fixed an issue where exported FBX files would not correctly have their textures assigned in the output file.

2022-02-17
+ BUGFIX
    - Reverted model scaling changes from 2.3.7.5 - Changes were not fully vetted and contained significant bugs.

2022-02-16
+ BUGFIX
    - Auto-Skin selector now properly retains modpack link between modified models and the modpacks that imported them (for enable/disable purposes) ( Thanks Tani! )
    - Custom model import size dialog now correctly included in release build.

2022-02-15
+ MINOR
    - Updated auto-material assignment to assign Bibo+ mods onto _bibo materials (if they exist).
    - Back-end work in preparation for Overlay Modpacks

2022-02-07
+ MAJOR
    - Introduced Body Material Auto-Assignment option in the Customize Menu.
    - Introduced Body Material Auto-Assignment tool under Tools Menu.
  
+ MINOR
    - Added additional custom scaling options when importing models. (Thanks Alena!) 
    - Fixed a bug with non-Global versions that would allow users to attempt to download invalid index backups for their region. (Thanks kj415j45!)
+ BUGFIX
	- Resolved an error where item select on import could fail to combine metadata files together correctly when importing multiple items of the same set simultaneously.

2022-01-09
+ MINOR
  - Moved the Disccord and GitHub buttons from the top left to the top right to prevent misclicks
  - Added the ability to set a default modpack URL for standard and wizard modpacks
  - TexTools now remembers the path to the last imported file during model import if the default exported model file doesn't exist
  - Added number labels to the colourset editor
+ BUGFIXES
  - Fixed a crash when cancelling modpack creation in the wizard modpack creator

2021-12-08
+ MINOR
  - Added FMV and metadata support for Male Viera