@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <item>
-    <version>2.3.7.7</version>
-    <url>https://github.com/TexTools/FFXIV_TexTools_UI/releases/download/v2.3.7.7/FFXIV_TexTools_v2.3.7.7.zip</url>
+    <version>2.3.7.8</version>
+    <url>https://github.com/TexTools/FFXIV_TexTools_UI/releases/download/v2.3.7.8/FFXIV_TexTools_v2.3.7.8.zip</url>
     <changelog>https://raw.githubusercontent.com/TexTools/FFXIV_TexTools_Updater/master/changelog.txt</changelog>
     <mandatory>true</mandatory>
 </item>
